--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>I'am Rajesh.</h1>
     <h2>a <span class="web">Web</span> Developer </h2>
     <img class="birds-img"src="images/Birds2.png" alt="birds-img">
-    <img class="cloud-bottom" src="images/cloud1.png" alt="cloud2-img">
+    <img class="cloud-bottom" src="https://freepngimg.com/thumb/cloud/33-cloud-png-image.png" alt="cloud2-img">
     <img class="trees-img"src="images/Tree2.png" alt="trees-img">
 
   </div>
