--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="Top-container">
-    <img class="cloud-top" src="images/cloud1.png" alt="cloud-img">
+    <img class="cloud-top" src="https://freepngimg.com/thumb/cloud/33-cloud-png-image.png" alt="cloud-img">
     <h1>I'am Rajesh.</h1>
     <h2>a <span class="web">Web</span> Developer </h2>
     <img class="birds-img"src="images/Birds2.png" alt="birds-img">
