--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-img" src="images/rajesh1" alt="profile picture">
+      <img class="profile-img" src="images/Rajesh2.png" alt="profile picture">
       <h2>Hello.</h2>
       <p >Creative and tech-startup HR professional with two plus years’ experience in a broad range of IT technical help desk and support role. Experienced supporting for Government, University, Private organizations by providing Informed IT
         Solutions and liaising between users and vendors with proven ability to communicate effectively. Coordinated and worked as a part of team in a high-volume environment to resolve customer requests and issues.</p>
