--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/feed/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/home">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://rajeshdeveloper89.github.io/Css-Website/">Website</a>
     <p class="since">© 2013 Rajesh Velagapudi.</p>
   </div>
 
